# pypia-20241021

notebooks/01_basic-imaging-pillow/: pyproject.toml  tp-basic-imaging-pillow_enonce.ipynb  tp-basic-imaging-pillow_live-coding.ipynb
notebooks/02_basic-imaging-numpy-pillow-plt/: pyproject.toml  tp-basic-imaging-mnp_enonce.ipynb
notebooks/03_filtering-edges/: pyproject.toml
notebooks/04_api-request/: pyproject.toml  td-api-image_enonce.ipynb  td-api-image_live-coding.ipynb
notebooks/05_acp/: pyproject.toml  tp-acp-image_enonce.ipynb  tp-acp-image_live-coding.ipynb
notebooks/06_tabular-clustering/: demo-k-means-clustering-with-python.ipynb  pyproject.toml
notebooks/07_tabular-classification/: demo-basic-titanic-with-sklearn.ipynb  pyproject.toml
notebooks/08_handwritten-digit-classification/: handwritten-digit-classification_enonce.ipynb  handwritten-digit-classification_live-coding.ipynb
notebooks/09_cnn-weather-detection/: .env  pyproject.toml
notebooks/10_cnn-weather-detection-classification/: cnn-pytorch-lightning-with-probable-bugs.py  tp-cnn-weather-classification_corrige.ipynb
notebooks/11_face-detection/: face-detection.ipynb  face-detection_corrige.ipynb
