[tool.poetry]
name = "acp"
version = "0.1.0"
description = ""
authors = ["BSP"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
opencv-python = "^4.8.0.76"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
