[tool.poetry]
name = "09-cnn-weather-detection"
version = "0.1.0"
description = ""
authors = ["BSP"]
readme = "README.md"
packages = [{include = "09_cnn_weather_detection"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
